tests/traci/get_variable/StoppingPlaces/ChargingStations/errors/UnsupportedVariable/errors.traci
TraCIAPI is deprecated. Please use libtraci instead, see https://sumo.dlr.de/docs/Libtraci.html.
Error: Answered with error to command 0x25: Get ChargingStation Variable: unsupported variable 0xff specified
